--- a/app/src/main/res/layout/item_cargo_company.xml
+++ b/app/src/main/res/layout/item_cargo_company.xml
@@ -6,13 +6,11 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_blur"
     android:padding="16dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp">
+    android:layout_marginBottom="8dp">
 
     <TextView
         android:id="@+id/tvCargoCompanyName"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -21,6 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivPendingCargoIndicator"
         android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0"
         tools:text="Örnek Kargo Şirketi A.Ş." />
 
     <ImageView
