--- a/app/src/main/res/drawable/background_blur_pending_villa.xml
+++ b/app/src/main/res/drawable/background_blur_pending_villa.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="64dp"/>
-    <solid android:color="#33564B4B"/>
+    <solid android:color="#59572B2B"/>
+    <stroke android:color="#40898989" android:width="1dp" />
 </shape>
