--- a/app/src/main/res/drawable/background_bottom_sheet.xml
+++ b/app/src/main/res/drawable/background_bottom_sheet.xml
@@ -4,4 +4,5 @@
     <corners android:topLeftRadius="35dp"
         android:topRightRadius="35dp"/>
     <solid android:color="#33505050"/>
+    <stroke android:color="#40898989" android:width="1dp" />
 </shape>
