--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#93A3C3"
-        android:endColor="#C1ABAB"
+    <gradient android:startColor="#2C5364"
+        android:endColor="#0F2027"
         android:gradientRadius="10dp"
         android:angle="18"/>
 </shape>
