--- a/app/src/main/res/layout/dialog_manage_villa_contacts.xml
+++ b/app/src/main/res/layout/dialog_manage_villa_contacts.xml
@@ -77,6 +77,40 @@
             app:layout_constraintBottom_toTopOf="@id/btnClose"
             tools:listitem="@layout/item_contact"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout_empty_list"
+            app:layout_constraintTop_toTopOf="@id/recyclerViewVillaContacts"
+            app:layout_constraintBottom_toBottomOf="@id/recyclerViewVillaContacts"
+            app:layout_constraintStart_toStartOf="@id/recyclerViewVillaContacts"
+            app:layout_constraintEnd_toEndOf="@id/recyclerViewVillaContacts"
+            android:paddingHorizontal="16dp"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_empty"
+                android:text="Kişi listesi boş"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="27sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label_empty"
+                android:text="Bu villa için eşleştirilmiş bir villa sakini bulunamadı.\nAşağıdaki buton ile yeni kişi oluşturabilir, veya daha önce oluşturulmuş kişiler arasından seçim yapabilirsiniz."
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                app:layout_constraintTop_toBottomOf="@id/title_empty"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </eightbitlab.com.blurview.BlurView>
