--- a/app/src/main/res/layout/dialog_select_recipients.xml
+++ b/app/src/main/res/layout/dialog_select_recipients.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <eightbitlab.com.blurview.BlurView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/blur_window"
-    android:background="@drawable/background_bottom_sheet">
+    android:background="@drawable/background_window">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -44,6 +44,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintHeight_max="350dp"
             android:id="@+id/rv_available_villas"
             app:layout_constraintTop_toBottomOf="@id/etSearch"
             app:layout_constraintBottom_toTopOf="@+id/selected_items_layout"
@@ -56,74 +57,84 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <eightbitlab.com.blurview.BlurView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/selected_items_layout"
-            android:background="@drawable/background_bottom_sheet"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp">
+            android:background="@drawable/background_edittext"
+            app:layout_constraintTop_toBottomOf="@id/rv_available_villas"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rv_selected_villas"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/btnCreateCargos"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:orientation="horizontal"
                 app:spanCount="2"
                 tools:listitem="@layout/item_selected_villa"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:layout_marginBottom="8dp"/>
+                android:clipToPadding="false"
+                android:paddingStart="7dp"
+                android:paddingEnd="7dp"
+                android:paddingBottom="7dp"
+                android:paddingTop="7dp"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+        </eightbitlab.com.blurview.BlurView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnCreateCargos"
+            android:background="@drawable/background_blur"
+            app:layout_constraintTop_toBottomOf="@id/selected_items_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp">
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnCreateCargos"
-                android:background="@drawable/background_blur"
+                android:id="@+id/titleCreateCargos"
+                android:text="Kargoları Oluştur"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/icCreateCargos"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/btnClose"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/titleCreateCargos"
-                    android:text="Kargoları Oluştur"
-                    android:textColor="@color/white"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/icCreateCargos"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginStart="16dp"/>
-
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/icCreateCargos"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
-                    android:src="@drawable/ic_next"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_marginStart="16dp"/>
 
             <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/btnClose"
+                android:id="@+id/icCreateCargos"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:src="@drawable/ic_close"
-                android:padding="10dp"
-                android:background="@drawable/background_blur"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"/>
+                android:src="@drawable/ic_next"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/btnClose"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:src="@drawable/ic_close"
+            android:padding="10dp"
+            android:background="@drawable/background_blur"
+            app:layout_constraintTop_toBottomOf="@id/selected_items_layout"
+            app:layout_constraintEnd_toStartOf="@id/btnCreateCargos"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
