--- a/app/src/main/res/layout/item_main_tab.xml
+++ b/app/src/main/res/layout/item_main_tab.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="48dp"
+    android:layout_height="52dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background_tab"
     android:padding="5dp">
 
@@ -15,6 +15,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/ivPendingCargoIndicator"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:src="@drawable/ic_indicator_dot"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/ivTabIcon"
+        app:layout_constraintBottom_toBottomOf="@id/ivTabIcon"
+        app:layout_constraintEnd_toStartOf="@id/ivTabIcon"
+        android:layout_marginEnd="5dp"
+        tools:visibility="visible"
+        android:contentDescription="Bekleyen kargo var" />
 
     <TextView
         android:layout_width="wrap_content"
