--- a/app/src/main/res/layout/item_villa.xml
+++ b/app/src/main/res/layout/item_villa.xml
@@ -38,12 +38,15 @@
             android:textColor="@color/white"
             android:layout_marginStart="8dp"
             android:maxLines="1"
+            android:singleLine="true"
             android:ellipsize="marquee"
+            android:marqueeRepeatLimit="1"
             tools:text="Ahmet Yılmaz"
             app:layout_constraintTop_toTopOf="@+id/tvVillaNo"
             app:layout_constraintStart_toEndOf="@+id/tvVillaNo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tvVillaNo" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvVillaNo"
+            android:layout_marginEnd="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
