--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,12 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_transparent">#7F000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#0D47A1</color> <color name="colorPrimaryDark">#002171</color>
-    <color name="colorAccent">#42A5F5</color> <color name="colorSecondary">#2196F3</color> <color name="cardBackground">#FFFFFF</color> <color name="textColorPrimary">#212121</color>
+    <color name="colorPrimary">#FFC107</color> <color name="colorPrimaryDark">#FFA726</color>
+    <color name="colorAccent">#FFA726</color> <color name="colorSecondary">#FFC107</color> <color name="cardBackground">#FFFFFF</color>
+    <color name="textColorPrimary">#4B4B4B</color>
     <color name="textColorSecondary">#A8A7A7</color>
+    <color name="chip_background_selected">#40898989</color>
 </resources>
